fix: modal z-index

--- a/components/modal.scss
+++ b/components/modal.scss
@@ -1,6 +1,7 @@
 .hdd-modal {
   display: none;
   position: fixed;
+  z-index: 99;
   top: 0;
   right: 0;
   bottom: 0;
